--- a/src/clip-path.css
+++ b/src/clip-path.css
@@ -1,7 +1,7 @@
 .clip-path-bot {
-  clip-path: polygon(0 0, 100% 0, 100% 79%, 0 100%);
+  clip-path: polygon(0 0, 100% 0%, 100% 87%, 0 100%);
 }
 
 .clip-path-top {
-  clip-path: polygon(0 11%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
 }
